# trabalho_ed2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  how_to_clone.txt  main.cpp
.github/workflows/: workflow.yml
dataset/: small_dataset_simp_sem_descricao.csv  std_dataset_simp_sem_descricao.csv
include/: Csv.hpp  CsvLivros.hpp  DataFrameLivros.hpp  Registro.hpp  Stats.hpp  Txt.h  Txt.hpp  TxtLivros.hpp  csvLivros.hpp  helpers.hpp  metricas.hpp  txtLivros.hpp
include/secao_2/: Autor.h  Autor.hpp  Hash.h  Hash.hpp  HashAutor.hpp  HashRegistro.hpp  Primo.h  Primo.hpp
include/secao_3/: AVP.h  AVP.hpp  ArvoreB.h  NoB.h  noVP.h  noVP.hpp
io/: entrada.txt  saida.txt
io/secao_1/: entrada.txt  saida.txt
io/secao_1/stats/: stats_comp.txt  stats_tempo.txt  stats_trocas.txt
io/secao_2/stats/: freq_autores.txt
io/secao_3/: entrada.txt
io/secao_3/stats/insercao/: stats_comp.txt  stats_tempo.txt
io/stats/: stats_comp.txt  stats_tempo.txt  stats_trocas.txt
src/: Csv.cpp  CsvLivros.cpp  DataFrameLivros.cpp  Registro.cpp  Stats.cpp  Txt.cpp  TxtLivros.cpp  csvLivros.cpp  main.cpp  metricas.cpp  quicksort.cpp  txtLivros.cpp
src/secao_2/: Autor.cpp  Hash.cpp  HashAutor.cpp  HashRegistro.cpp  Primo.cpp
src/secao_3/: AVP.cpp  ArvoreB.cpp  NoB.cpp  noVP.cpp
testando_github/: main.cpp  testando_github.cbp
